clang/test/BSC/Negative/Ownership/RuleCheck/linked-list/linked-list.cbs
// RUN: %clang_cc1 -verify %s

#define NULL ((void *)0)

extern void * malloc(unsigned long);
extern void free(void *);

struct A {
    int * _Owned m;
    struct A * _Owned next;
};

void f1(struct A * _Owned p) {
    int * _Owned pm1 = p->next->next->next->m;
    int * _Owned pm2 = p->next->next->next->m; // expected-error {{use of moved value: `p.next.next.next.m`}}
} // expected-error {{memory leak of value: `pm2`}}
  // expected-error@-1 {{memory leak of value: `pm1`}}
  // expected-error@-2 {{memory leak of value: `p`}}
  // expected-error@-3 {{field memory leak of value: `p`, p.m, p.next, p.next.m, p.next.next, p.next.next.m, p.next.next.next, p.next.next.next.next, p.next.next.next.next.m, p.next.next.next.next.next... are leak}}